# binance-futures-trading-bot

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
bot/: __init__.py  client.py  config.py  exceptions.py  logging_config.py  orders.py  validators.py
tests/: conftest.py  test_client.py  test_orders.py  test_validators.py
