[project]
name = "trading-bot"
version = "1.0.0"
description = "Simplified trading bot for Binance Futures Testnet (USDT-M)"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
trading-bot = "cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
